language/move-prover/tests/sources/functional/global_invariants.exp
Move prover returns: exiting with boogie verification errors
error: global memory invariant does not hold

    ┌── tests/sources/functional/global_invariants.move:18:9 ───
    │
 18 │         invariant [global] forall a: address where exists<R>(a): exists<S>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_invariants.move:38:5: create_R_invalid
    =     at tests/sources/functional/global_invariants.move:40:34: create_R_invalid
    =         account = <redacted>

error: global memory invariant does not hold

    ┌── tests/sources/functional/global_invariants.move:20:9 ───
    │
 20 │         invariant update [global] forall a: address where old(exists_R(a)): exists<R>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_invariants.move:62:5: remove_R_invalid
    =     at tests/sources/functional/global_invariants.move:64:34: remove_R_invalid
    =         account = <redacted>,
    =         <redacted> = <redacted>
    =     at tests/sources/functional/global_invariants.move:65:22: remove_R_invalid

error: global memory invariant does not hold

    ┌── tests/sources/functional/global_invariants.move:18:9 ───
    │
 18 │         invariant [global] forall a: address where exists<R>(a): exists<S>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_invariants.move:53:5: remove_S_invalid
    =     at tests/sources/functional/global_invariants.move:55:34: remove_S_invalid
    =         account = <redacted>,
    =         <redacted> = <redacted>
    =     at tests/sources/functional/global_invariants.move:56:22: remove_S_invalid
